# Yi-San-Website

./: .gitignore  README.md  SECURITY.md
.github/workflows/: BackEnd-ci.yml  frontend-deploy.yml
BackEnd/: alembic.ini  pyproject.toml  requirements.txt  run.py
BackEnd/alembic/versions/: 161fcc254b7c_add_bookings_table.py  41a7089fd09c_add_bookings_table.py  4d8ed9d5fdf1_add_node_id_to_logs.py  95b9285b2cd3_create_initial_tables.py  ad5101fca59a_upgrade_to_jsonb.py  bd0af0bb1fee_add_password_field.py  c740a8f42490_create_bookings_table.py  ccd99c159295_add_auth_fields.py  d919797d4fc7_add_product_fields.py
BackEnd/data/: sample_cases.json.example
BackEnd/scripts/: setup_postgres.ps1  setup_postgres.sh  test_api.py  test_api_ci.py
BackEnd/src/: auth.py  config.py  database.py  main.py  models.py
BackEnd/src/dependencies/: permissions.py
BackEnd/src/middleware/: error_handler.py
BackEnd/src/routers/: __init__.py  admin_projects.py  auth.py  bookings.py  cases.py  client.py  products.py  users.py
BackEnd/src/scripts/: insert_cases.py
BackEnd/src/utils/: mailer.py
FrontEnd/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
FrontEnd/src/: App.tsx  index.css  main.tsx
FrontEnd/src/components/: LanguageSwitcher.tsx  ScrollToTop.tsx  index.ts
FrontEnd/src/data/: businessData.ts  caseStudies.ts  designers.ts  websiteData.ts
FrontEnd/src/hooks/: useApi.ts  useHeartbeat.ts
FrontEnd/src/pages/: AboutPage.tsx  AppointmentPage.tsx  CaseDetailPage.tsx  CasesPage.tsx  CategoriesPage.tsx  CategoryPage.tsx  (+6 more)
(+33 files in other folders)
