[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for demo"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = {extras = ["email"], version = "^2.4.0"} # email 校验支持
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
asyncpg = "^0.29.0"
slowapi = "^0.1.9"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.6.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"